codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_queued_mail_after_commentary.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies with pending input

## Window 1
-- request 1 (request; First request) --
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <headless_session>
        This session runs unattended through `codex exec`. Nobody reads the `commentary` channel while you work,...nd put everything the user needs in the final answer. [hash=cb124ac4f054c233]
        </headless_session>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    first prompt
-- request 2 (request; Second request) --
03:message/assistant:
    first answer
04:agent_message
